// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SearchBar should match snapshot with predictiveSearch 1`] = `
<form
  className="ter-search-bar ter-input"
  onSubmit={[Function]}
>
  <div
    className="ter-search-bar__input ter-input__wrap"
  >
    <input
      onChange={[Function]}
      placeholder="Search"
      type="text"
      value="d"
    />
  </div>
  <button
    className="ter-search-bar__submit"
  >
    <i
      className="fi flaticon-magnifying-glass"
    />
  </button>
  <ul>
    <li
      key="dog-0"
    >
      dog
    </li>
    <li
      key="bird-1"
    >
      bird
    </li>
  </ul>
</form>
`;

exports[`SearchBar should match snapshot without placeholder props 1`] = `
<form
  className="ter-search-bar ter-input"
  onSubmit={[Function]}
>
  <div
    className="ter-search-bar__input ter-input__wrap"
  >
    <input
      onChange={[Function]}
      placeholder="Search"
      type="text"
      value=""
    />
  </div>
  <button
    className="ter-search-bar__submit"
  >
    <i
      className="fi flaticon-magnifying-glass"
    />
  </button>
</form>
`;

exports[`SearchBar should match the snapshot 1`] = `
<form
  className="ter-search-bar ter-input"
  onSubmit={[Function]}
>
  <div
    className="ter-search-bar__input ter-input__wrap"
  >
    <input
      onChange={[Function]}
      placeholder="test placeholder"
      type="text"
      value=""
    />
  </div>
  <button
    className="ter-search-bar__submit"
  >
    <i
      className="fi flaticon-magnifying-glass"
    />
  </button>
</form>
`;
